# Car-details-shop

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  README.md  SECURITY.md  db.sqlite3  docker-compose.yml  example.env  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  vercel.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml
api/: index.py
docs/: index.md
shop/: asgi.py  settings.py  urls.py
web/: admin.py  models.py  urls.py  views.py
web/migrations/: 0002_alter_product_group_alter_product_id.py  0003_alter_product_group.py  0004_alter_product_options_product_created_at_and_more.py
web/static/css/: custom.css  style.css
web/static/js/: custom.js
web/templates/admin/web/: change_list.html
web/templates/web/: about.html  demo_info.html  index.html  main.html  shop.html
